# game

./: CMakeLists.txt  README.md  build_all.sh  conanfile.py  run_game
assets/: CMakeLists.txt
assets/mystery/: mystery.png:Zone.Identifier
include/: Settings.hpp
lib/: CMakeLists.txt
lib/entity/Obstacle/: Block.cpp  Block.hpp  Obstacle.cpp  Obstacle.hpp
lib/entity/alien/: Alien.cpp  Alien.hpp
lib/entity/laser/: Laser.cpp  Laser.hpp
lib/entity/mystery_enemy/: MysterEnemy.cpp  MysteryEnemy.hpp
lib/entity/spaceship/: Spaceship.cpp  Spaceship.hpp
lib/game/: CMakeLists.txt  Game.cpp  Game.hpp
lib/settings/: CMakeLists.txt  Settings.hpp
profiles/: default
scripts/: build_all.sh  rungame.sh
src/: CMakeLists.txt  main.cpp
